# ESIR1_projet_prog

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/SDL2/include/SDL2/: SDL_image.h  SDL_video.h
libs/SDL2/lib/msvc_arm64/: SDL2.exp  SDL2_gfx.dll.recipe  SDL2_gfx.exp  SDL2_gfx.iobj  SDL2_gfx.lib  SDL2_gfx.vcxproj.FileListAbsolute.txt  SDL2main.lib
libs/SDL2/lib/msvc_arm64/SDL2_gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDL2_gfx.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libs/SDL2/lib/msvc_x64/: SDL2.exp  SDL2_gfx.dll.recipe  SDL2_gfx.exp  SDL2_gfx.iobj  SDL2_gfx.ipdb  SDL2_gfx.lib  SDL2_gfx.vcxproj.FileListAbsolute.txt  SDL2main.lib
libs/SDL2/lib/msvc_x64/SDL2_gfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDL2_gfx.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libs/SDL2_image/src/: IMG.c
resources/: map.map  out.txt  png_to_csv.py  test.map
src/: camera.cpp  camera.h  cluster.cpp  cluster.h  color.h  config.h  event.cpp  event.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  texture_manager.cpp  texture_manager.h
src/GUI/: copper_bar.cpp  copper_bar.h  food_bar.cpp  food_bar.h  gui_component.cpp  gui_component.h  health_bar.cpp  health_bar.h
src/entity/: animated_sprite.cpp  animated_sprite.h  chicken.cpp  chicken.h  collidable.h  collidable_entity.cpp  collidable_entity.h  copper.cpp  copper.h  cow.cpp  cow.h  crop.cpp  crop.h  entity.cpp  entity.h  fusee.cpp  fusee.h  interactible.cpp  interactible.h  item.cpp  item.h  movable.cpp  movable.h  player.cpp  player.h  pnj.cpp  pnj.h  rock.cpp  rock.h  sprite.cpp  sprite.h  tomato.cpp  tomato.h  tomato_crop.h  wheat_crop.h
src/game/: context.cpp  context.h  game.cpp  game.h
src/map/: map.cpp  map.h  serializer.cpp  serializer.h
src/physics/: aabb.h  circle.h  collidable.cpp  collidable.h  physics.cpp  physics.h
src/sprites/: animated_sprite.cpp  animated_sprite.h  old_sprite.cpp  old_sprite.h  sprite.cpp  sprite.h
src/utils/: vec2.h  vec4.h
